--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,7 @@
     <script type="text/javascript" src="{% static 'js/header.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery-scrolltofixed-min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery-ui.js' %}"></script>
+    <script type="text/javascript" src="//cdn.ckeditor.com/4.6.1/standard/ckeditor.js"></script>
     {% if user.is_authenticated %}
         <script type="text/javascript" src="{% static 'js/contact.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/SendBird.js' %}"></script>
