update home, product_detail view with new product model

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -103,9 +103,8 @@
 }
 
 .special-service {
-    height:80px;
+    min-height:500px;
     margin-top: 60px;
-    margin-bottom: 50px;
     overflow: hidden;
 }
 
